Updating font and readme file

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <!-- displays site properly based on user's device -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+  <meta name="description" content="Author: Chitrang Shah, A 
+  four card page that shows different business topics.">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Four Card Page</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style/style.css">   
 </head>
 <body>
@@ -18,8 +20,6 @@
     <div class="TitleDetails">Our Artificial Intelligence powered tools use millions of project data points 
       to ensure that your project is successful</div>
   </div>
-
-
   <div class="MainContentWrapper">
     <div class="SupervisorCard Card">      
       <div class="CardContentWrapper">
@@ -27,7 +27,7 @@
         <div class="CardDetails">Monitors activity to identify project roadblocks</div>
         <div class="IconWrapper">
           <div class="Icon">
-            <img src="images/icon-supervisor.svg" height="64" width="64"/> 
+            <img src="images/icon-supervisor.svg" alt="Supervisor Card" height="64" width="64"/> 
           </div>
         </div>
       </div>
@@ -38,7 +38,7 @@
         <div class="CardDetails">Scans our talent network to create the optimal team for your project</div>
         <div class="IconWrapper">
           <div class="Icon">
-            <img src="images/icon-team-builder.svg" height="64" width="64"/> 
+            <img src="images/icon-team-builder.svg" alt="Team Builder Card" height="64" width="64"/> 
           </div>
         </div>
       </div>
@@ -49,7 +49,7 @@
         <div class="CardDetails">Regularly evaluates our talent to ensure quality</div>
         <div class="IconWrapper">
           <div class="Icon">
-            <img src="images/icon-karma.svg" height="64" width="64"/> 
+            <img src="images/icon-karma.svg" alt="Karma Card" height="64" width="64"/> 
           </div>
         </div>
       </div>
@@ -60,7 +60,7 @@
         <div class="CardDetails">Uses data from past projects to provide better delivery estimates</div>
         <div class="IconWrapper">
           <div class="Icon">
-            <img src="images/icon-calculator.svg" height="64" width="64"/> 
+            <img src="images/icon-calculator.svg" alt="Calculator Card" height="64" width="64"/> 
           </div>
         </div>
       </div>
